# rust_demobymyself

./: .env  Cargo.toml  asia.txt
src/: lib.rs  main.rs
src/mods/: boxinfo.rs  funhelper.rs  mod.rs  studentinfo.rs
