[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = {version ="0.9.5", features = ["bigdecimal"]}
bigdecimal = "0.3.0"

tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["compat"] }
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

rand = "0.8.5"

chrono = { version = "0.4", features = ["serde"] }
async-std = { version = "1.12.0", features = ["attributes"] }

itertools = "0.10.0"
log = "0.4.17"
log4rs = "1.1.1"
utils ="0.0.3"
